[package]
name = "rust_telegram_bot"
version = "0.1.0"
authors = ["loo.maclin <loo.maclin@protonmail.com>"]

[dependencies]
telegram-bot = "=0.6.0"
futures = "=0.1.18"
tokio-core = "=0.1.12"
serde = "=1.0.27"
serde_derive = "=1.0.27"
serde_json = "=1.0.9"
hyper = "=0.11.15"
#futures-await = "=0.1.0"

futures-await = { git = "https://github.com/alexcrichton/futures-await.git", rev = "04bfded769d09813d58d8b5ca847735daf6373e1" }